# mfml-4-qc

./: .buildinfo  .gitignore  LICENSE  README.md  README.txt  README_pypi.md  computation_times.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: docs.yml  static.yml
.virtual_documents/examples/: Untitled.ipynb
_modules/: index.html
_modules/mfml_qc/: active_learning.html  datasets.html  krr.html  mfml.html  representations.html  utils.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: 03_mfml_basics.ipynb.txt  06_omfml.ipynb.txt  08_pool_based_active_learning.ipynb.txt  sg_execution_times.rst.txt
auto_examples/: 01_load_and_represent.html  01_load_and_represent.ipynb  02_krr_learning_curve.html  02_krr_learning_curve.ipynb  03_mfml_basics.html  03_mfml_basics.ipynb  04_duck_typing_mfml.html  04_duck_typing_mfml.ipynb  05_mfml_learning_curve.html  05_mfml_learning_curve.ipynb  06_omfml.html  06_omfml.ipynb  07_orca_oracle.html  07_orca_oracle.ipynb  08_pool_based_active_learning.html  08_pool_based_active_learning.ipynb  index.html  sg_execution_times.html
data/benzene/: energies.csv  timecosts.csv
examples/: 01_benzene_example.py  01_load_and_represent.py  02_krr_learning_curve.py  03_mfml_basics.py  04_duck_typing_mfml.py  05_mfml_learning_curve.py  06_omfml.py  07_orca_oracle.py  07_orca_orcale.py  08_pool_based_active_learning.py  README.txt
tests/: test_active_learning.py  test_krr.py  test_mfml.py  test_oracles.py  test_representations.py
(+65 files in other folders)
