[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfml-4-qc"
version = "1.0.0"
description = "A Multifidelity Machine Learning framework for Quantum Chemistry"
readme = "README_pypi.md"
requires-python = ">=3.8"
authors = [
    { name = "Vivin Vinod", email = "vinod@uni-wuppertal.de" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
dependencies = [
    "numpy>=2.0.0",
    "numba>=0.60.0",
    "tqdm>=4.60.0",
    "matplotlib",
    "scikit-learn>=1.0.0"
]

# where to find
[project.urls]
Homepage = "https://github.com/vivinvinod/mfml-4-qc"
Repository = "https://github.com/vivinvinod/mfml-qc.git"
"Bug Tracker" = "https://github.com/vivinvinod/mfml-4-qc/issues"
Documentation = "https://mfml-qc.readthedocs.io/"



# Optional dependencies
[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]
pyscf = [
    "pyscf>=2.0.0"
]
dev = [
    "pytest>=7.0.0",
    "sphinx", # For documentation
    "black",   # code formatting
    "nbsphinx",
    "memory_profiler",
    "sphinx-gallery", "pydata-sphinx-theme","pyparsing"
]

[tool.setuptools.packages.find]
where = ["src"]

# for pytests
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
